Revert "Add --add-exports"
This reverts commit f9294a5b170175b610e6004cce05815c450f955c.