@@ -176,8 +176,6 @@ allprojects {
       'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
       '--add-exports',
       'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.internal.opt/jdk.intenal.opt=ALL-UNNAMED',
       // Required because the Checker Framework reflectively accesses private members in com.sun.tools.javac.comp.
       '--add-opens',
       'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
@@ -295,7 +293,6 @@ allprojects {
         options.addBooleanOption('-add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED', true)
         options.addBooleanOption('-add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED', true)
         options.addBooleanOption('-add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED', true)
-        options.addBooleanOption('--add-exports=jdk.internal.opt/jdk.intenal.opt=ALL-UNNAMED', true)
 
         // "-Xwerror" requires Javadoc everywhere.  Currently, CI jobs require Javadoc only
         // on changed lines.  Enable -Xwerror in the future when all Javadoc exists.
@@ -344,8 +341,6 @@ allprojects {
           'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
           '--add-exports',
           'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-          '--add-exports',
-          'jdk.internal.opt/jdk.intenal.opt=ALL-UNNAMED',
         ]
         // This is equivalent to writing "exports jdk.compiler/... to ALL-UNNAMED" in the
         // module-info.java of jdk.compiler, so corresponding --add-opens are only required for
@@ -840,7 +835,6 @@ subprojects {
                 // uses the jdk.jdeps module.
                 '-javacoptions:--add-modules jdk.jdeps',
                 '-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED',
-                '-javacoptions:--add-exports=jdk.internal.opt/jdk.intenal.opt=ALL-UNNAMED',
                 '-vmoptions:--add-opens=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED',
                 '-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                 '-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
